# adk-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  STABILITY.md  lefthook.yml  publish.sh
.cargo/: audit.toml  config.toml
.github/workflows/: codeact-monty.yml
adk-acp/: README.md
adk-acp/src/: connection.rs  session.rs  streaming.rs
adk-action/: README.md
adk-agent/: Cargo.toml  README.md
adk-agent/src/: compaction.rs  lib.rs  llm_agent.rs
adk-agent/tests/: agent_callback_tests.rs  callback_integration_test.rs  context_propagation_test.rs  llm_agent_tests.rs  model_call_observer_test.rs  review_regression_tests.rs  streaming_test.rs  terminal_persistence_test.rs  tool_callback_tests.rs  tool_confirmation_tests.rs  workflow_tests.rs
adk-artifact/: README.md
adk-artifact/src/: file.rs
adk-audio/: README.md
adk-auth/: Cargo.toml  README.md
adk-auth/src/: audit.rs  lib.rs
adk-awp/src/: consent.rs  detect.rs  error_response.rs  events.rs  trust.rs
adk-browser/: README.md
adk-browser/src/: pool.rs
adk-cli/: README.md
adk-cli/src/: setup.rs
adk-code/src/: rust_executor.rs  rust_sandbox.rs
adk-core/: Cargo.toml  README.md
adk-core/src/: context.rs  event.rs  identity.rs  intra_compaction.rs  lib.rs  model.rs  observer.rs  tool.rs
adk-deploy/: README.md
adk-enterprise/: README.md
adk-enterprise/src/: client_events.rs  client_sessions.rs  stream.rs
adk-enterprise/tests/: agent_crud_tests.rs  contract_tests.rs  integration_tests.rs  retry_policy_tests.rs  serialization_conformance_tests.rs  session_event_deserialization_tests.rs  stream_tests.rs  user_event_serialization_tests.rs
adk-eval/: README.md
adk-eval/src/: scoring.rs
adk-gemini/: Cargo.toml  README.md
adk-gemini/examples/: interactions_basic.rs
adk-gemini/src/: client.rs  lib.rs  models.rs  pricing.rs  tests.rs
adk-gemini/tests/: interactions_tests.rs  multimodal_fn_response_tests.rs
adk-graph/: README.md
adk-graph/src/: graph.rs  stream.rs  timeout.rs
adk-guardrail/: README.md
adk-guardrail/src/: content.rs  schema.rs
adk-managed/: README.md
adk-managed/src/: agent_builder.rs  default_runtime.rs  runtime.rs  schema_normalization.rs  session_loop.rs  usage.rs
adk-managed/tests/: fixture_conformance_tests.rs
adk-memory/: Cargo.toml  README.md
adk-memory/src/: graph.rs  lib.rs
adk-mistralrs/: Cargo.toml  README.md
adk-mistralrs/src/: adapter.rs  client.rs  lib.rs  vision.rs
adk-model/: Cargo.toml  README.md
adk-model/examples/: gemini_openai_compat.rs  gemini_thinking.rs
adk-model/src/: openai_compatible.rs
adk-model/tests/: interactions_runtime_integration_tests.rs  openai_client_preservation_tests.rs  openai_streaming_exploration_tests.rs
adk-payments/: README.md
adk-plugin/: README.md
adk-rag/: README.md
adk-rag/src/: chunking.rs
adk-realtime/: Cargo.toml  README.md
adk-realtime/benches/: livekit_pcm_bench.rs
adk-realtime/examples/: livekit_bridge.rs  openai_session_update.rs  openai_webrtc.rs
adk-realtime/src/: agent.rs  audio.rs  config.rs  events.rs  lib.rs  model.rs  runner.rs  session.rs
adk-realtime/tests/: integration_builder_unit_tests.rs  integration_identity_property_test.rs  integration_memory_injection_tests.rs  integration_tool_bridge_property_test.rs  integration_transcript_property_test.rs  integration_transcript_unit_tests.rs
adk-retry-reflect/src/: plugin.rs
adk-runner/: Cargo.toml  README.md
adk-runner/src/: builder.rs  context.rs  launcher.rs  lib.rs  observer.rs  runner.rs
adk-runner/tests/: run_lifecycle_test.rs  run_observer_test.rs
adk-rust/: Cargo.toml  README.md
adk-rust-macros/: README.md
adk-rust-macros/src/: lib.rs
adk-rust/examples/: performance_0_8_llm_agents.rs
adk-rust/src/: lib.rs
adk-sandbox/: Cargo.toml
adk-sandbox/src/: error.rs  lib.rs  process.rs  tool.rs  wasm.rs
adk-server/: Cargo.toml  README.md
adk-server/src/: lib.rs  ui_types.rs
adk-session/: README.md
adk-session/src/: inmemory.rs  migration.rs  service.rs  sqlite.rs
adk-skill/src/: index.rs  parser.rs  select.rs
adk-telemetry/: Cargo.toml  README.md
adk-telemetry/src/: config.rs  events.rs  lib.rs  semconv.rs  span_exporter.rs
adk-tool/: Cargo.toml  README.md
adk-tool/src/: agent_tool.rs  lib.rs  simple_context.rs
cargo-adk/: README.md
cargo-adk/src/: addon.rs  cli.rs  codegen.rs  composition.rs  interactive.rs  lib.rs  main.rs  pattern.rs  provider.rs  registry.rs  template.rs
docs/design/: coding-agent.md
docs/official_docs/: index.md  introduction.md  quickstart-a2ui.md  quickstart.md
docs/podcast/: episode-2-slides.md  episode-2-v1-launch-script.md
docs/security/: DEPENDENCY-ADVISORIES.md
examples/: README.md
examples/a2a_interceptors/: README.md
examples/acp_kiro/: Cargo.toml
examples/acp_server/: .env.example  Cargo.toml  README.md
examples/acp_server/src/: main.rs
examples/agent_registry/: README.md
examples/gemini_interactions_agent/: .env.example  Cargo.toml  README.md
examples/gemini_interactions_agent/src/: main.rs
examples/gemini_managed_agents/: .env.example  Cargo.toml  README.md
examples/gemini_managed_agents/src/: main.rs
examples/harness_pattern/: Cargo.toml  README.md
examples/harness_pattern/src/: main.rs
examples/knowledge_graph_agent/: Cargo.toml  README.md
examples/knowledge_graph_agent/src/: main.rs
examples/live_translation/: Cargo.toml  README.md
examples/live_translation/assets/: index.html
examples/live_translation/src/: main.rs  server.rs  translate.rs
examples/sandbox_workspace_agent/: .env.example  Cargo.toml  README.md
examples/sandbox_workspace_agent/src/: config.rs  display.rs  main.rs
examples/skills_multilingual/: .env.example  Cargo.toml  README.md
examples/skills_multilingual/.skills/: code-review.md  поиск-документов.md  タスク管理.md  数据库操作.md  电脑操作.md  일정-관리.md
examples/skills_multilingual/src/: main.rs
examples/tier_examples/standard/: Cargo.toml
scripts/: bump-version.py  check-publish-order.py  setup-dev.sh
xtask/: Cargo.toml
(+214 files in other folders)
