[package]
name = "acp-server-example"
version = "0.0.1"
edition = "2024"
publish = false

[workspace]

[dependencies]
adk-acp = { path = "../../adk-acp", features = ["server"] }
adk-agent = { path = "../../adk-agent" }
adk-core = { path = "../../adk-core" }
adk-model = { path = "../../adk-model", features = ["gemini"] }
adk-runner = { path = "../../adk-runner" }
adk-session = { path = "../../adk-session" }
adk-tool = { path = "../../adk-tool" }
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
async-trait = "0.1"
