[package]
name = "gemini-interactions-agent"
version = "0.0.1"
edition = "2024"
publish = false

[workspace]

[dependencies]
adk-core = { path = "../../adk-core" }
adk-agent = { path = "../../adk-agent" }
adk-model = { path = "../../adk-model", features = ["gemini", "gemini-interactions"] }
adk-runner = { path = "../../adk-runner" }
adk-session = { path = "../../adk-session" }
adk-tool = { path = "../../adk-tool" }
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
