[package]
name = "gemini-managed-agents"
version = "0.0.1"
edition = "2024"
publish = false

[workspace]

[dependencies]
adk-gemini = { path = "../../adk-gemini", features = ["interactions"] }
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
