[package]
name = "harness-pattern-example"
version = "0.0.1"
edition = "2024"
publish = false
description = "Demonstrates the Harness trait pattern: Runner (production with real LLM) vs TestHarness (deterministic) — agent code depends only on the abstraction"

[workspace]

[dependencies]
adk-core = { path = "../../adk-core" }
adk-model = { path = "../../adk-model", features = ["gemini"] }
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
uuid = { version = "1.23", features = ["v4"] }
futures = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
anyhow = "1.0"
