[package]
name = "knowledge-graph-agent"
version = "0.0.1"
edition = "2024"
publish = false
description = "An ordinary text LlmAgent with a bi-temporal knowledge-graph long-term memory: remember/relate to write, load_memory to recall, across sessions"

[workspace]

[dependencies]
# ADK crates (path deps to the workspace)
adk-core = { path = "../../adk-core" }
adk-agent = { path = "../../adk-agent" }
adk-model = { path = "../../adk-model", features = ["gemini"] }
adk-runner = { path = "../../adk-runner" }
adk-session = { path = "../../adk-session" }
adk-memory = { path = "../../adk-memory", features = ["graph-memory"] }
adk-tool = { path = "../../adk-tool", features = ["graph-memory-tools"] }

# Runtime + helpers
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
dotenvy = "0.15"
