[package]
name = "live-translation-example"
version = "0.0.1"
edition = "2024"
publish = false
description = "Live speech translation web app — a server-side bridge to OpenAI gpt-realtime-translate and Gemini 3.5 Live Translate, with a browser UI (pick a target language, speak, hear/read the translation)"

[workspace]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web server (serves the UI, bridges browser audio over a WebSocket)
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# WebSocket client to the provider translation endpoints
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots", "connect"] }
futures = "0.3"

# Encoding / serialization
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors / env / logging
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS provider for tokio-tungstenite (rustls)
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# Session IDs
uuid = { version = "1.23", features = ["v4"] }
