[package]
name = "sandbox-workspace-agent-example"
version = "0.0.1"
edition = "2024"
publish = false

[workspace]

[dependencies]
adk-sandbox = { path = "../../adk-sandbox", features = ["workspace"] }
adk-runner = { path = "../../adk-runner", features = ["sandbox-runner"] }
adk-agent = { path = "../../adk-agent" }
adk-model = { path = "../../adk-model", features = ["gemini"] }
adk-core = { path = "../../adk-core" }
adk-session = { path = "../../adk-session" }
adk-tool = { path = "../../adk-tool" }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[features]
default = []
workspace-docker = ["adk-sandbox/workspace-docker"]
