[package]
name = "skills-multilingual"
version = "0.0.1"
edition = "2024"
publish = false

[workspace]

[dependencies]
adk-rust = { path = "../../adk-rust", features = ["minimal"] }
adk-skill = { path = "../../adk-skill" }
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
dotenvy = "0.15"
anyhow = "1.0"
